# ntext-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yaml  publish.yml
src/: main.rs
