[package]
name = "ntext-cli"
version = "0.1.0"
authors = ["Uttarayan Mondal <uttarayan21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ntext = { git = "https://github.com/uttarayan21/ntext-rs" }
clap = "2.33.3"

